--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
         <div class="row py-2 py-md-3">
           <div class="col">
             <nav id="menuColor" class="navbar navbar-expand-lg navbar-light">
-              <a href="" class="navbar-brand">
-                <img id="imgMenu" src="images/logo-site.svg" height="35px" width="auto" class=" align-top">
-                <img id="imgMenuDark" src="images/logo-site-w.svg" height="35px" width="auto" class="d-none align-top">
+              <a href="" class="navbar-brand d-flex">
+                <img id="imgMenu" src="images/logo-site.svg" width="auto" class="logo-site align-top">
+                <img id="imgMenuDark" src="images/logo-site-w.svg" width="auto" class="d-none logo-site align-top">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
