--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="font/font1/stylesheet.css">
     <link href="font/font2/stylesheet.css">
-
+    <link rel="icon" type="image/png" href="logo.png">
 
 
 <meta property="og:site_name" content="Alice & Henrique | 27.07.23">
 <meta property="og:title" content="Alice & Henrique | 27.07.23" />
 <meta property="og:description" content="Faça parte da nossa história">
 <meta property="og:url" content="" />
-<meta property="og:image" itemprop="image" content="https://www.thaisaejoao.com/images/main-ogimage.jpg" />
+<meta property="og:image" itemprop="image" content="images/main-ogimage.jpg" />
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="300">
@@ -132,7 +132,8 @@
       <div class="container py-5">
         <div class="row pt-4 justify-content-center">
           <div class="col-lg-10 col-12">
-            <div class="d-flex flex-md-row flex-column card-duo" id="evento" data-aos="fade-up">
+            <div class="d-flex flex-md-row flex-column card-duo" data-aos="fade-up">
+              <div class="anchor" id="evento"></div>
                 <div class="card-image evento"> </div>
                 <div class="card-content">
                   <div class="card-title">
@@ -181,7 +182,8 @@
 
         <div class="row pt-4 justify-content-center">
           <div class="col-lg-10 col-12">
-            <div class="d-flex flex-md-row flex-column card-duo" id="traje" data-aos="fade-up">
+            <div class="d-flex flex-md-row flex-column card-duo" data-aos="fade-up">
+              <div class="anchor" id="traje"></div>
               <div class="card-content">
                 <div class="card-title">
                   <h6 class="tag">
