--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </section>
 
     <section id="frase" class="bg-down">
-      <div class="text-center bg py-4" >
+      <div class="text-center bg px-3 py-4" >
         <div >
           <p class="bigger Brown" data-aos="fade-up">
               “Se você vier pro que der e vier comigo” 
@@ -109,7 +109,7 @@
             </div>
          </div>
          <div class="row py-3 justify-content-center flex-column flex-sm-row">
-          <div class="col-10 d-flex justify-content-center align-items-center">
+          <div class="col-10 d-flex justify-content-center align-items-center mx-auto">
             <div class="time">
               <h4 id="hours" class="Brown"></h4>
               <p>horas</p>
