--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <meta property="og:title" content="Alice & Henrique | 21.07.23" />
 <meta property="og:description" content="Faça parte da nossa história">
 <meta property="og:url" content="" />
-<meta property="og:image" itemprop="image" content="images/main-ogimage.jpg" />
+<meta property="og:image" itemprop="image" content="https://www.aliceehenrique.com/images/main-ogimage.jpg" />
 <meta property="og:image:type" content="image/jpeg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="300">
