--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,10 @@
 
 
         <li class="nav-item active mx-3">
-          <a class="nav-link" data-toggle="modal" data-target="#modalPresentes" >Lista de presentes</a>
+          <!--
+            data-toggle="modal" data-target="#modalPresentes"
+          -->
+          <a class="nav-link" href="#" >Lista de presentes</a>
         </li>
 
         <li class="nav-item active mx-3">
