--- a/modal-presente.html
+++ b/modal-presente.html
@@ -29,7 +29,7 @@
           </div>
           <div class="modal-body text-center">
             <img src="images/main/qrcode.jpg" class="img-fluid w-50 d-none d-sm-inline">
-            <textarea class="my-3 " id="text-pix" disabled>joaopedroethaisa@gmail.com</textarea>
+            <textarea class="my-3 " id="text-pix" disabled></textarea>
           </div>
           
           <div class="modal-footer">
