--- a/menu.html
+++ b/menu.html
@@ -7,15 +7,15 @@
           <!--
             data-toggle="modal" data-target="#modalPresentes"
           -->
-          <a class="nav-link" href="#" >Lista de presentes</a>
+          <a class="nav-link" href="https://aliceehenrique.com/presentes" >Lista de presentes</a>
         </li>
 
         <li class="nav-item active mx-3">
-          <a class="nav-link" href="#evento">Evento</a>
+          <a class="nav-link" href="https://aliceehenrique.com#evento">Evento</a>
         </li>
 
         <li class="nav-item active mx-3">
-          <a class="nav-link" href="#traje">Traje</a>
+          <a class="nav-link" href="https://aliceehenrique.com#traje">Traje</a>
         </li>
 
 
