--- a/modal-presente.html
+++ b/modal-presente.html
@@ -29,7 +29,7 @@
           </div>
           <div class="modal-body text-center">
             <img src="" id="img-pix" class="img-fluid w-50 d-none d-sm-inline">
-            <textarea class="p-3 " id="text-pix" disabled></textarea>
+            <textarea class="p-3 small" id="text-pix" disabled></textarea>
           </div>
           
           <div class="modal-footer">
