--- a/presentes.html
+++ b/presentes.html
@@ -44,7 +44,7 @@
         <div class="row py-2 py-md-3">
           <div class="col">
             <nav id="menuColor" class="navbar navbar-expand-lg navbar-light">
-              <a href="" class="navbar-brand d-flex">
+              <a href="https://aliceehenrique.com" class="navbar-brand d-flex">
                 <img id="imgMenu" src="images/logo-site.svg" class="logo-site align-top">
                 <img id="imgMenuDark" src="images/logo-site-w.svg" class="d-none logo-site align-top">
               </a>
@@ -66,7 +66,7 @@
         <div class="row py-2 py-md-3">
           <div class="col">
             <nav id="menuColor" class="navbar navbar-expand-lg navbar-light">
-              <a href="" class="navbar-brand d-flex">
+              <a href="https://aliceehenrique.com" class="navbar-brand d-flex">
                 <img id="imgMenu" src="images/logo-site.svg" class="logo-site align-top">
                 <img id="imgMenuDark" src="images/logo-site-w.svg" class="d-none logo-site align-top">
               </a>
