--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </div>
     </section>
 
-    <section id="count">
+    <section id="count" class="c-light">
       <div class="container py-4">
         <div class="row text-center justify-content-center">
             <div class="col-md-3 align-self-center text-left" data-aos="fade-left">
