--- a/index.html
+++ b/index.html
@@ -135,6 +135,35 @@
         <div class="row pt-4 justify-content-center">
           <div class="col-lg-10 col-12">
             <div class="d-flex flex-md-row flex-column card-duo" data-aos="fade-up">
+              <div class="anchor" id="historia"></div>
+                <div class="card-image historia"> </div>
+                <div class="card-content">
+                  <div class="card-title">
+                    
+                    <h2 class="Brown">
+                      Nossa História
+                    </h2>
+                  </div>
+
+                  <div class="card-text pt-3">
+                    <p>
+                      No meio de um ano tão caótico para o mundo, a tecnologia nos uniu. E a possibilidade de irmos nos conhecendo aos poucos foi caminhando lado a lado com amizade, carinho, companheirismo e amor.<br>
+                      A rotina foi se tornando mais leve, por saber que tínhamos um momento de respiro no final do dia. Descobrimos que nosso coração batia mais forte pelo maior time do mundo, o Flamengo. E isso nos uniu ainda mais, porque amar alguém é lindo, amar um alguém rubro negro é sensacional! Compartilhando a vida, os sonhos de um foi se tornando do outro. A chegada do Petkovic veio para comprovar isso e hoje não existe Lili sem Pet e Kiko ou Kiko sem Lili e Pet.<br>
+                      E como nosso primeiro encontro foi numa noite estrelada, o pedido de casamento não podia ser diferente.  No meio de uma estrada de um dos lugares mais incríveis do mundo – Chapada – tendo apenas as estrelas como testemunhas, foi feito o pedido mais lindo da vida.<br> 
+                      E esse é apenas o primeiro capítulo da nossa história, pois ainda vamos escrever muitos outros, juntos. Sempre.<br>
+                    </p>
+  
+                  </div>
+                </div>
+
+
+            </div>
+          </div>
+        </div>
+
+        <div class="row pt-4 justify-content-center">
+          <div class="col-lg-10 col-12">
+            <div class="d-flex flex-md-row flex-column card-duo" data-aos="fade-up">
               <div class="anchor" id="presentes"></div>
               <div class="card-content order-2 order-md-1 justify-content-between">
                 <div class="card-title">
@@ -148,7 +177,7 @@
 
                 <div class="card-text pt-3">
                   <p>
-                    texto
+                    Mais do que presente, experiências incríveis que vamos viver na nossa lua de mel.
                   </p>
 
                 </div>
