--- a/menu.html
+++ b/menu.html
@@ -2,11 +2,11 @@
 
     <ul class="navbar-nav align-items-center justify-content-end w-100">
 
+        <li class="nav-item active mx-3">
+          <a class="nav-link" href="https://aliceehenrique.com#historia">História</a>
+        </li>
 
         <li class="nav-item active mx-3">
-          <!--
-            data-toggle="modal" data-target="#modalPresentes"
-          -->
           <a class="nav-link" href="https://aliceehenrique.com/presentes" >Lista de presentes</a>
         </li>
 
