--- a/presentes.html
+++ b/presentes.html
@@ -45,8 +45,8 @@
           <div class="col">
             <nav id="menuColor" class="navbar navbar-expand-lg navbar-light">
               <a href="https://aliceehenrique.com" class="navbar-brand d-flex">
-                <img id="imgMenu" src="images/logo-site.svg" class="logo-site align-top">
-                <img id="imgMenuDark" src="images/logo-site-w.svg" class="d-none logo-site align-top">
+                <img alt="logo" id="imgMenu" src="images/logo-site.svg" class="logo-site align-top">
+                <img alt="logo" id="imgMenuDark" src="images/logo-site-w.svg" class="d-none logo-site align-top">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -82,8 +82,8 @@
           <div class="col">
             <nav id="menuColor" class="navbar navbar-expand-lg navbar-light">
               <a href="https://aliceehenrique.com" class="navbar-brand d-flex">
-                <img id="imgMenu" src="images/logo-site.svg" class="logo-site align-top">
-                <img id="imgMenuDark" src="images/logo-site-w.svg" class="d-none logo-site align-top">
+                <img alt="logo" id="imgMenu" src="images/logo-site.svg" class="logo-site align-top">
+                <img alt="logo" id="imgMenuDark" src="images/logo-site-w.svg" class="d-none logo-site align-top">
               </a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -104,7 +104,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 mb-3 center-h">
             <div class="card" style="width: 18rem;">
-              <img src="images/presente/cavalgada.jpg" class="card-img-top">
+              <img alt="imagem" src="images/presente/cavalgada.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title c-primary text-center">
                   Cavalgada Pôr do Sol
@@ -143,7 +143,7 @@
 
           <div class="col-lg-4 col-md-6 mb-3 center-h">
             <div class="card" style="width: 18rem;">
-              <img src="images/presente/boas.jpg" class="card-img-top">
+              <img alt="imagem" src="images/presente/boas.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title c-primary text-center">
                   Boas vindas
@@ -182,7 +182,7 @@
 
           <div class="col-lg-4 col-md-6 mb-3 center-h">
             <div class="card" style="width: 18rem;">
-              <img src="images/presente/churrasco.jpg" class="card-img-top">
+              <img alt="imagem" src="images/presente/churrasco.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title c-primary text-center">
                   Churrasco Campeiro
@@ -221,7 +221,7 @@
 
           <div class="col-lg-4 col-md-6 mb-3 center-h">
             <div class="card" style="width: 18rem;">
-              <img src="images/presente/restaurante.jpg" class="card-img-top">
+              <img alt="imagem" src="images/presente/restaurante.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title c-primary text-center">
                   Experiência Restaurante Alma
@@ -260,7 +260,7 @@
 
           <div class="col-lg-4 col-md-6 mb-3 center-h">
             <div class="card" style="width: 18rem;">
-              <img src="images/presente/picnic.jpg" class="card-img-top">
+              <img alt="imagem" src="images/presente/picnic.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title c-primary text-center">
                   Picnic Day
@@ -299,7 +299,7 @@
 
           <div class="col-lg-4 col-md-6 mb-3 center-h">
             <div class="card" style="width: 18rem;">
-              <img src="images/presente/relaxante.jpg" class="card-img-top">
+              <img alt="imagem" src="images/presente/relaxante.jpg" class="card-img-top">
               <div class="card-body">
                 <h5 class="card-title c-primary text-center">
                   Tratamento Relaxante
